# server

./: .dockerignore  .env.template  .gitignore  .travis.yml  Dockerfile  Dockerfile.prod  Makefile  Production.dockerfile  README.md  app.env.template  development.env.template  docker-compose-production.yml  docker-compose.production.yml  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  manage.py  production.env.template  requirenments.txt  web.sh
app/: .dockerignore  Dockerfile  Makefile  admin.py  docker-entrypoint.sh  forms.py  gunicorn.conf.py  gunicorn_config.py  manage.py  models.py  permissions.py  pyproject.toml  requirements.txt  serializers.py  urls.py  utils.py  validators.py  views.py  web.sh
app/conf/: credentials.py  credentials.py.template  local_settings.py  local_settings.py.template  settings.py  urls.py  wsgi.py
app/conf/settings/: __init__.py  base.py  development.py  local.py  production.py  shared.py
app/pet/: admin.py  apps.py  auth.py  choices.py  const.py  email_logic.py  exceptions.py  forms.py  models.py  pagination.py  pagination_service.py  permissions.py  photo_service.py  s3utils.py  serializers.py  urls.py  views.py
app/pet/management/commands/: createsu.py  init_settings.py  init_superuser.py  (+1 more)
app/pet/migrations/: 0001_initial.py  0002_auto_20210205_1837.py  0002_auto_20211027_1511.py  0002_passwordresetconfirmationcode.py  0003_settings.py
app/pet/models/: __init__.py  enums.py  objects.py
app/pet/tests/: data_factories.py  test_data.py  test_models.py  test_serializers.py  test_views.py
app/templates/admin/: base_site.html
(+192 files in other folders)
