[tool.poetry]
name = "app"
version = "1.0.0"
description = ""
authors = ["robsta7 <meremeev2001@gmail.com>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
appnope = "0.1.0"
asgiref = "3.2.10"
backcall = "0.2.0"
boto3 = "1.17.62"
botocore = "1.20.62"
certifi = "2020.11.8"
chardet = "3.0.4"
colorama = "0.4.4"
coreapi = "2.3.3"
coreschema = "0.0.4"
decorator = "4.4.2"
Django = "3.1.2"
django-appconf = "1.0.4"
django-cleanup = "5.1.0"
django-ratelimit = "3.0.1"
django-rest-framework = "0.1.0"
django-templated-mail = "1.1.1"
djangorestframework = "3.12.1"
djangorestframework-simplejwt = "4.4.0"
drf-yasg = "1.20.0"
factory-boy = "3.2.0"
Faker = "8.0.0"
gunicorn = "20.0.4"
idna = "2.10"
inflection = "0.5.1"
ipython = "7.19.0"
ipython_genutils = "0.2.0"
itypes = "1.2.0"
jedi = "0.17.2"
Jinja2 = "2.11.2"
jmespath = "0.10.0"
MarkupSafe = "1.1.1"
openapi-codec = "1.3.2"
packaging = "20.4"
parso = "0.7.1"
pexpect = "4.8.0"
pickleshare = "0.7.5"
pilkit = "2.0"
Pillow = "7.2.0"
prompt-toolkit = "3.0.8"
ptyprocess = "0.6.0"
Pygments = "2.7.2"
PyJWT = "1.7.1"
pyparsing = "2.4.7"
python-dateutil = "2.8.1"
python-decouple = "3.4"
pytz = "2020.1"
requests = "2.25.0"
"ruamel.yaml" = "0.16.12"
"ruamel.yaml.clib" = "0.2.2"
simplejson = "3.17.2"
six = "1.15.0"
sqlparse = "0.3.1"
text-unidecode = "1.3"
traitlets = "5.0.5"
uritemplate = "3.0.1"
urllib3 = "1.26.2"
wcwidth = "0.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
